#51: implemented suggestions and fix `@autowired` notation in Event